# shellcode_Weaver

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
shellcode_weaver/: __init__.py  __main__.py  cli.py  config.py  models.py  utils.py
shellcode_weaver/analysis/: __init__.py
shellcode_weaver/api/: __init__.py
shellcode_weaver/c2/: __init__.py
shellcode_weaver/crypto/: __init__.py
shellcode_weaver/evasion/: __init__.py
shellcode_weaver/generators/: __init__.py  linux.py  windows.py
shellcode_weaver/gui/: __init__.py
shellcode_weaver/output/: __init__.py
shellcode_weaver/polymorphic/: __init__.py
tests/: test_complete.py
