[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "shellcode-weaver"
version = "4.0.0"
description = "Ultimate Polymorphic Shellcode Engine - Authorized Research Only"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Educational/Research Use Only"}
authors = [
    {name = "Security Research Team"}
]
keywords = ["security", "shellcode", "research", "polymorphic", "evasion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
full = [
    "keystone-engine>=0.9.2",
    "capstone>=5.0.0",
]

[project.scripts]
shellcode-weaver = "shellcode_weaver.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/shellcode-weaver"
Documentation = "https://github.com/yourusername/shellcode-weaver/blob/main/README.md"
Repository = "https://github.com/yourusername/shellcode-weaver.git"
Issues = "https://github.com/yourusername/shellcode-weaver/issues"
